    Based on a patch by Gary Buhrmaster.

    Update to rra-c-util 3.4:

    * Fix broken GCC attribute markers causing compilation problems.
    * Kerberos library probing fixes without transitive shared libraries.
    * Fix Autoconf warnings when probing for AIX's bundled Kerberos.
    * Update warning flags for GCC 4.6.1.

    Update to C TAP Harness 1.6:

    * Fix compliation of runtests with more aggressive warnings.

WebAuth 3.7.3 (2010-09-20)

    Explicitly link the mod_webauthldap module with the portability glue
    library, fixing a build failure on Red Hat Enterprise 4 x86_64.

    Fix LDAP attribute retrieval in WebAuth 2.x backward compatibility
    mode, which was broken in 3.7.0.

    The WebAuth library also installs a pkg-config configuration file for
    the use of software that wants to link against it.

    Update to rra-c-util 2.7:

    * Look for krb5-config in /usr/kerberos/bin after the user's PATH.
    * Update utility library and test suite for newer GCC warnings.

WebAuth 3.7.2 (2010-08-12)

    Fix wa_keyring option parsing problems introduced in 3.7.0.  Correctly
    count arguments so that commands are recognized correctly and do not
    require -- before commands with negative time offsets, like "gc -90d".

    Fix uninitialized variable that caused wa_keyring to randomly default
    to verbose mode for list.

    mod_webkdc now returns a user rejected error instead of a generic
    Kerberos error for attempted authentications to expired accounts or
    accounts set to disallow authentication, allowing WebLogin to display
    a rejected user error message rather than a generic failure message.

    Add portability code for old MIT Kerberos and Heimdal libraries
    without krb5_get_init_creds_opt_free.

    Fix build problems with with Perl module (only built when the WebKDC
    is enabled) on platforms where all shared libraries need to be linked
    with explicitly.

WebAuth 3.7.1 (2010-07-23)
